# evse-v2-bricklet

./: README.rst
hardware/: LICENSE.txt  evse-v2.kicad_pcb  evse-v2.kicad_prl  evse-v2.kicad_pro  evse-v2.kicad_sch  evse-v2.pro  evse-v2.sch  sym-lib-table
software/: CMakeLists.txt  changelog  cmake_config_custom.txt
software/src/: adc.c  adc.h  button.c  button.h  charging_slot.c  charging_slot.h  communication.c  communication.h  contactor_check.c  contactor_check.h  dc_fault.c  dc_fault.h  eichrecht.c  eichrecht.h  evse.c  evse.h  frequency.c  frequency.h  hardware_version.c  hardware_version.h  iec61851.c  iec61851.h  led.c  led.h  lock.c  lock.h  main.c  modbus.c  modbus.h  phase_control.c  phase_control.h  plc.c  plc.h  rs485.c  rs485.h  sdm.c  sdm.h  sdm630.c  sdm630.h  sdm72dm.c  (+5 more)
software/src/configs/: config.h  config_button.h  config_contactor_check.h  config_custom_bootloader.h  config_custom_bootstrapper.h  config_dc_fault.h  config_evse.h  config_frequency.h  config_hardware_version.h  config_led.h  config_lock.h  config_logging.h  config_phase_control.h  config_rs485.h  config_timer.h  config_tmp1075n.h
tests/: energy_meter.py  evse_v2_tester.py  evse_v3_tester.py  full_test.py  full_test_v3.py  test_phase_change.py
tests/tinkerforge/: bricklet_evse_v2.py  bricklet_industrial_counter.py  bricklet_industrial_digital_in_4_v2.py  bricklet_industrial_digital_out_4_v2.py  bricklet_industrial_dual_ac_in.py  bricklet_industrial_dual_analog_in_v2.py  bricklet_industrial_dual_relay.py  bricklet_industrial_quad_relay_v2.py  bricklet_io4_v2.py  bricklet_rgb_led_v2.py  device_display_names.py  device_factory.py  device_factory_all.py
